--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,4 +9,7 @@
  }
 
  <h2>Request Report</h2>
+<a href="/report" class="btn btn-default" aria-label="Left Align">
+    <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+</a>
 }
