--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,6 +10,6 @@
 
  <h2>Request Report</h2>
 <a href="/report" class="btn btn-default" aria-label="Left Align">
-    <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+    <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Generate Report
 </a>
 }
